--- a/projects/marblemaze/marblemaze.html
+++ b/projects/marblemaze/marblemaze.html
@@ -96,14 +96,14 @@
             
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="virtual/schematic.PNG" target="new"><img alt="Schematic" src="virtual/schematic.PNG"></a>
+                        <a href="virtual/schematic.png" target="new"><img alt="Schematic" src="virtual/schematic.png"></a>
                         <figcaption>Schematic</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="virtual/home.jpg" target="new"><img alt="Homepage" src="virtual/home.JPG"></a>
+                        <a href="virtual/home.jpg" target="new"><img alt="Homepage" src="virtual/home.jpg"></a>
                         <figcaption>Homepage</figcaption>
                     </figure>
                 </div>
@@ -132,28 +132,28 @@
             
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/schematic.PNG" target="new"><img alt="Schematic" src="physical/schematic.PNG"></a>
+                        <a href="physical/schematic.png" target="new"><img alt="Schematic" src="physical/schematic.png"></a>
                         <figcaption>Schematic</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/LIS3DH.JPG" target="new"><img alt="LIS3DH" src="physical/LIS3DH.JPG"></a>
+                        <a href="physical/LIS3DH.jpg" target="new"><img alt="LIS3DH" src="physical/LIS3DH.jpg"></a>
                         <figcaption>LIS3DH</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/servos.JPG" target="new"><img alt="TowerPro SG-5010 servos" src="physical/servos.JPG"></a>
+                        <a href="physical/servos.jpg" target="new"><img alt="TowerPro SG-5010 servos" src="physical/servos.jpg"></a>
                         <figcaption>TowerPro SG-5010 servos</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/maze.JPG" target="new"><img alt="Maze" src="physical/maze.JPG"></a>
+                        <a href="physical/maze.jpg" target="new"><img alt="Maze" src="physical/maze.jpg"></a>
                         <figcaption>3D-Printed Maze</figcaption>
                     </figure>
                 </div>
@@ -171,7 +171,7 @@
 
                 <div class="six columns">
                     <figure class="cap-bot">
-                        <a href="physical/closeup.JPG" target="new"><img alt="Closeup" src="physical/closeup.JPG"></a>
+                        <a href="physical/closeup.jpg" target="new"><img alt="Closeup" src="physical/closeup.jpg"></a>
                         <figcaption>Physical Marble Tilt Maze</figcaption>
                     </figure>
                 </div>
