--- a/projects/marblemaze/marblemaze.html
+++ b/projects/marblemaze/marblemaze.html
@@ -139,21 +139,21 @@
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/LIS3DH.jpg" target="new"><img alt="LIS3DH" src="physical/LIS3DH.jpg"></a>
+                        <a href="physical/LIS3DH.JPG" target="new"><img alt="LIS3DH" src="physical/LIS3DH.JPG"></a>
                         <figcaption>LIS3DH</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/servos.jpg" target="new"><img alt="TowerPro SG-5010 servos" src="physical/servos.jpg"></a>
+                        <a href="physical/servos.JPG" target="new"><img alt="TowerPro SG-5010 servos" src="physical/servos.JPG"></a>
                         <figcaption>TowerPro SG-5010 servos</figcaption>
                     </figure>
                 </div>
 
                 <div class="three columns">
                     <figure class="cap-bot">
-                        <a href="physical/maze.jpg" target="new"><img alt="Maze" src="physical/maze.jpg"></a>
+                        <a href="physical/maze.JPG" target="new"><img alt="Maze" src="physical/maze.JPG"></a>
                         <figcaption>3D-Printed Maze</figcaption>
                     </figure>
                 </div>
@@ -171,7 +171,7 @@
 
                 <div class="six columns">
                     <figure class="cap-bot">
-                        <a href="physical/closeup.jpg" target="new"><img alt="Closeup" src="physical/closeup.jpg"></a>
+                        <a href="physical/closeup.JPG" target="new"><img alt="Closeup" src="physical/closeup.JPG"></a>
                         <figcaption>Physical Marble Tilt Maze</figcaption>
                     </figure>
                 </div>
