--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
                     <div class="columns projects-item">
                         <div class="item-wrap">
-                            <a href="projects/usie/usie.html" title="">
+                            <a href="projects/USIE/usie.html" title="">
                                 <img alt="" src="images/project_icons/icon-usie.png">
                                 <div class="overlay">
                                     <div class="projects-item-meta">
