--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
                    <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
                    <li><a href="www.instagram.com/flinfotos"><i class="fa fa-instagram"></i></a></li>
                    <li><a href="www.linkedin.com/in/aboutfrancislin"><i class="fa fa-linkedin"></i></a></li>
+		   <li><a href="github.com/francislin96"><i class="fa fa-github"></i></a></li>
                </ul>
                <p class="copyright">Template @ styleshout.com</p>
            
