separate projects by type

--- a/projects/impossiblelist/impossiblelist.html
+++ b/projects/impossiblelist/impossiblelist.html
@@ -93,8 +93,12 @@
                 <li>Complete a Spartan Sprint</li>
                 <li>Run a mile under 8 minutes
                 <li>Do 50 consecutive push-ups</li>
-                <li>Do 5 pull-up</li>
-                <li>Do 5 chin-ups</li>
+                <li><s>Do 5 pull-ups</s> [10/31/2018]
+                    <ul>
+                        <li>Do 10 pull-ups</li>
+                    </ul>
+                </li>
+                <li><s>Do 10 chin-ups</s></li>
                 <li>Get a 6-pack</li>
                 <li>Do a morning workout routine 50 days in a row</li>
             </ul>
@@ -119,7 +123,7 @@
             <ul>
                 <li>Pay off my student debts</li>
                 <li>Have a meal with 5 people I normally wouldn't within a month</li>
-                <li>Have a candlelit dinner</li>
+                <li><s>Have a candlelit dinner</s> [12/7/2018]</li>
                 <li>Learn ballroom dance</li>
                 <li>Invest in stocks</li>
             </ul>			
