add extrication buddy project

--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
                                 </a>
                             </div>
                         </div> <!-- Sleep Data end -->
+                        
+                        <div class="columns projects-item">
+                            <div class="item-wrap">
+                                <a href="projects/extricationbuddy/extricationbuddy.html" title="">
+                                    <img alt="" src="images/project_icons/icon-extricationbuddy.png">
+                                    <div class="overlay">
+                                        <div class="projects-item-meta">
+                                            <h5>Extrication Buddy</h5>
+                                            <p>Unity, Vuforia, Autodesk</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> <!-- Intro to Machine Learning end -->
 
                         <div class="columns projects-item">
                             <div class="item-wrap">
