add nba hackathon 2019 projects

--- a/index.html
+++ b/index.html
@@ -157,11 +157,39 @@
                                 </a>
                             </div>
                         </div> <!-- Intro to Machine Learning end -->
+                        
+                        <div class="columns projects-item">
+                            <div class="item-wrap">
+                                <a href="projects/nbahack2019final/nbahack2019final.html" title="">
+                                    <img alt="" src="images/project_icons/icon-nbahack2019final.png">
+                                    <div class="overlay">
+                                        <div class="projects-item-meta">
+                                            <h5>2019 NBA Hackathon Final Phase</h5>
+                                            <p>Python: pandas</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> <!-- 2019 NBA Hackathon Final Phase end -->
+                        
+                        <div class="columns projects-item">
+                            <div class="item-wrap">
+                                <a href="projects/nbahack2019/nbahack2019.html" title="">
+                                    <img alt="" src="images/project_icons/icon-nbahack2019.png">
+                                    <div class="overlay">
+                                        <div class="projects-item-meta">
+                                            <h5>2019 NBA Hackathon</h5>
+                                            <p>Python: pandas</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> <!-- 2019 NBA Hackathon end -->
 
                         <div class="columns projects-item">
                             <div class="item-wrap">
                                 <a href="projects/nbahack2018/nbahack2018.html" title="">
-                                    <img alt="" src="images/project_icons/icon-nbahack2018.jpg">
+                                    <img alt="" src="images/project_icons/icon-nbahack2018.png">
                                     <div class="overlay">
                                         <div class="projects-item-meta">
                                             <h5>2018 NBA Hackathon</h5>
@@ -175,7 +203,7 @@
                         <div class="columns projects-item">
                             <div class="item-wrap">
                                 <a href="projects/nbahack2017/nbahack2017.html" title="">
-                                    <img alt="" src="images/project_icons/icon-nbahack2017.jpg">
+                                    <img alt="" src="images/project_icons/icon-nbahack2017.png">
                                     <div class="overlay">
                                         <div class="projects-item-meta">
                                             <h5>2017 NBA Hackathon</h5>
@@ -260,7 +288,8 @@
                                     <img alt="" src="images/project_icons/icon-createathon19.png">
                                     <div class="overlay">
                                         <div class="projects-item-meta">
-                                            <h5>2019 AT&T Create-a-thon</h5>
+                                            <h5>L0v3.R</h5>
+                                            <p>Film</p>
                                         </div>
                                     </div>
                                 </a>
@@ -273,7 +302,8 @@
                                     <img alt="" src="images/project_icons/icon-createathon18.png">
                                     <div class="overlay">
                                         <div class="projects-item-meta">
-                                            <h5>2018 AT&T Create-a-thon</h5>
+                                            <h5>Bright & Early</h5>
+                                            <p>Film</p>
                                         </div>
                                     </div>
                                 </a>
