add marKEY project

--- a/index.html
+++ b/index.html
@@ -142,7 +142,21 @@
                                     </div>
                                 </a>
                             </div>
-                        </div> <!-- Intro to Machine Learning end -->
+                        </div> <!-- Extrication Buddy end -->
+                        
+                        <div class="columns projects-item">
+                            <div class="item-wrap">
+                                <a href="projects/marKEY/marKEY.html" title="">
+                                    <img alt="" src="images/project_icons/icon-marKEY.png">
+                                    <div class="overlay">
+                                        <div class="projects-item-meta">
+                                            <h5>mar/KEY</h5>
+                                            <p>Unity, Bose AR, APIs</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> <!-- Extrication Buddy end -->
 
                         <div class="columns projects-item">
                             <div class="item-wrap">
