change mar/KEY comment

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                     </div>
                                 </a>
                             </div>
-                        </div> <!-- Extrication Buddy end -->
+                        </div> <!-- mar/KEY end -->
 
                         <div class="columns projects-item">
                             <div class="item-wrap">
