update impossible list

--- a/projects/impossiblelist/impossiblelist.html
+++ b/projects/impossiblelist/impossiblelist.html
@@ -95,7 +95,8 @@
                 <li>Do 50 consecutive push-ups</li>
                 <li><s>Do 5 pull-ups</s> [10/31/2018]
                     <ul>
-                        <li>Do 10 pull-ups</li>
+                        <li><s>Do 10 pull-ups</s> [11/1/2019]</li>
+                        <li>Do 15 pull-ups</li>
                     </ul>
                 </li>
                 <li><s>Do 10 chin-ups</s></li>
@@ -113,7 +114,7 @@
                 <li>Be an expert in a field</li>
                 <li><s>Create a personal website</s> [6/20/16]
                     <ul>
-                        <li>Make it look much better</li>
+                        <li><s>Make it look much better</s> [9/2/2018]</li>
                     </ul>
                 </li>
             </ul>
@@ -125,7 +126,7 @@
                 <li>Have a meal with 5 people I normally wouldn't within a month</li>
                 <li><s>Have a candlelit dinner</s> [12/7/2018]</li>
                 <li>Learn ballroom dance</li>
-                <li>Invest in stocks</li>
+                <li><s>Invest in stocks</s> [12/1/2018]</li>
             </ul>			
             
         </div>
