add is today friday the 13th project

--- a/index.html
+++ b/index.html
@@ -157,6 +157,20 @@
                                 </a>
                             </div>
                         </div> <!-- mar/KEY end -->
+                        
+                        <div class="columns projects-item">
+                            <div class="item-wrap">
+                                <a href="projects/istodayfridaythe13th/istodayfridaythe13th.html" title="">
+                                    <img alt="" src="images/project_icons/icon-istodayfridaythe13th.png">
+                                    <div class="overlay">
+                                        <div class="projects-item-meta">
+                                            <h5>Is Today Friday The 13th?</h5>
+                                            <p>Python</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div> <!-- Is Today Fiday The 13th? end -->
 
                         <div class="columns projects-item">
                             <div class="item-wrap">
